--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
- 
   "author": "",
   "license": "ISC",
- 
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -21,7 +19,9 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.1",
-    "nodemailer": "^6.7.7"
+    "nanoid": "^4.0.0",
+    "nodemailer": "^6.7.7",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
